--- a/educateurs.html
+++ b/educateurs.html
@@ -69,7 +69,7 @@
     <section class="section card" style="text-align:center;">
         <h2>Notre kit pédagogique</h2>
         <p>Pour vous permettre de présenter notre projet facilement à vos collègues, à votre direction ou aux parents d'élèves, nous avons synthétisé notre approche dans un document PDF clair et concis.</p>
-        <a href="kit-pedagogique.html" class="btn" download>Accéder au kit éducateur (HTML)</a>
+        <a href="assets/kit-pedagogique.pdf" class="btn" download> Télécharger présentation Ludus Mentis - kit éducateur (PDF)</a>
     </section>
     
     <section class="section card">
