--- a/enjeux.html
+++ b/enjeux.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeux vidéo : comprendre les enjeux pour mieux agir | Ludus Mentis</title>
-    <meta name="description" content="Analyse approfondie des enjeux liés à la pratique du jeu vidéo chez les jeunes : temps d'écran, isolement, gestion des émotions, chiffres clés et sources à l'appui.">
+    <title>Enjeux des Jeux Vidéo : Écrans, Isolement et Solutions | Ludus Mentis</title>
+    <meta name="description" content="Analyse des enjeux liés aux jeux vidéo chez les jeunes : temps d'écran, gestion des émotions, risques. Découvrez comment notre approche encadrée apporte des solutions concrètes.">
+    <meta name="keywords" content="enjeux jeux vidéo, temps d'écran adolescent, gaming disorder, cyberharcèlement, solution parents, équilibre numérique">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
