--- a/educateurs.html
+++ b/educateurs.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Espace éducateurs et partenaires | Ludus Mentis</title>
-  <meta name="description" content="Découvrez comment Ludus Mentis collabore avec le monde de l'éducation pour transformer le jeu vidéo en un puissant outil pédagogique.">
+  <title>Espace Éducateurs : Le Jeu Vidéo comme Outil Pédagogique | Ludus Mentis</title>
+  <meta name="description" content="Pour les enseignants et professionnels de l'éducation. Découvrez comment nos ateliers développent des compétences clés (collaboration, esprit critique) applicables en milieu scolaire.">
+  <meta name="keywords" content="espace éducateurs, outil pédagogique, esport scolaire, projet pédagogique, compétences 21e siècle, savoir-être">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
-</head><body>
+</head>
+  
+  <body>
   <div id="header"></div>
 
   <main class="container">
