--- a/kit-pedagogique.html
+++ b/kit-pedagogique.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kit pédagogique | Ludus Mentis</title>
-  <meta name="description" content="Découvrez notre kit pédagogique pour les éducateurs, détaillant notre méthodologie et les compétences développées.">
+  <title>Kit Pédagogique pour Éducateurs | Ludus Mentis</title>
+  <meta name="description" content="Téléchargez notre kit pédagogique complet pour les enseignants et éducateurs. Il détaille notre vision, notre méthodologie et les compétences développées par les jeunes.">
+  <meta name="keywords" content="kit pédagogique, ressource enseignant, esport éducation, dossier pédagogique, jeu vidéo école">
   <style>
     /* ======================================================================
        STYLES.CSS INTÉGRÉ
