--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ludus Mentis – faq</title>
+  <title>FAQ - Questions Fréquentes sur nos Ateliers | Ludus Mentis</title>
+  <meta name="description" content="Nos réponses à vos questions : à qui s'adressent nos ateliers, la place de la compétition, comment s'inscrire... Tout ce que les parents doivent savoir.">
+  <meta name="keywords" content="FAQ, questions fréquentes, parents, compétition esport, inscription, bienveillance">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
