--- a/mentions.html
+++ b/mentions.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ludus Mentis – mentions légales</title>
+  <title>Mentions Légales | Ludus Mentis</title>
+  <meta name="description" content="Consultez les mentions légales de l'association Ludus Mentis ASBL.">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
