--- a/academie.html
+++ b/academie.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Notre académie : le programme détaillé | Ludus Mentis</title>
-  <meta name="description" content="Découvrez le programme de l'académie Ludus Mentis : déroulement d'une session type, piliers pédagogiques, et compétences développées par votre enfant.">
+  <title>L'Académie Ludus Mentis : Programme des Ateliers Jeux Vidéo</title>
+  <meta name="description" content="Découvrez le programme de notre académie pour jeunes de 10 à 15 ans. Déroulement d'une séance, piliers pédagogiques et développement de l'intelligence collective.">
+  <meta name="keywords" content="programme académie, atelier jeu vidéo, déroulement séance, pédagogie active, bienveillance, intelligence collective">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
