--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ludus Mentis – contact</title>
+  <title>Contact et Inscription | Ludus Mentis à Walhain</title>
+  <meta name="description" content="Une question ou une demande d'inscription ? Contactez l'équipe de Ludus Mentis à Walhain via notre formulaire ou par email. Nous vous répondons rapidement.">
+  <meta name="keywords" content="contact, inscription, information, email, formulaire, Walhain, académie esport">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
