--- a/kit-pedagogique.html
+++ b/kit-pedagogique.html
@@ -2,6 +2,13 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
+<!-- End Google Tag Manager -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kit Pédagogique pour Éducateurs | Ludus Mentis</title>
   <meta name="description" content="Téléchargez notre kit pédagogique complet pour les enseignants et éducateurs. Il détaille notre vision, notre méthodologie et les compétences développées par les jeunes.">
@@ -193,6 +200,10 @@
   </style>
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <div id="header" class="no-print"></div>
 
   <main class="container">
