--- a/contact.html
+++ b/contact.html
@@ -472,12 +472,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               });
             }
             
-            // Google Analytics 4 conversion event
-            if (typeof gtag !== 'undefined') {
-              gtag('event', 'generate_lead', {
-                'contact_type': contactTypeInput.value
-              });
-            }
+           <!-- Google tag (gtag.js) event - delayed navigation helper -->
+<script>
+  // Helper function to delay opening a URL until a gtag event is sent.
+  // Call it in response to an action that should navigate to a URL.
+  function gtagSendEvent(url) {
+    var callback = function () {
+      if (typeof url === 'string') {
+        window.location = url;
+      }
+    };
+    gtag('event', 'conversion_event_submit_lead_form', {
+      'event_callback': callback,
+      'event_timeout': 2000,
+      // <event_parameters>
+    });
+    return false;
+  }
+</script>
+
             
           } else {
             throw new Error('Network response was not ok');
