--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </ul>
     </section>
  
-      <section class="section card" id="stats">
+      <section class="section card">
       <h2>Pourquoi un accompagnement est-il essentiel&nbsp;?</h2>
         <p>Si le jeu vidéo est une passion pour des millions de jeunes, une pratique non encadrée présente des risques. les chiffres parlent d'eux-mêmes&nbsp;:</p>
       <ul>
