--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </li>
       </ul>
        <p style="margin-top: 1.5em;">Notre mission est de transformer ce temps d'écran en une expérience constructive.</p>
-      <a href="enjeux.html" class="btn">Voir les chiffres &amp; sources détaillés</a>
+      <a href="enjeux.html" class="btn" style="text-align:center;">Voir les chiffres &amp; sources détaillés</a>
     </section>
 
 
