--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </ul>
     </section>
  
-      <section class="section card">
+      <section class="section card" style="text-align:center;">
       <h2>Pourquoi un accompagnement est-il essentiel&nbsp;?</h2>
         <p>Si le jeu vidéo est une passion pour des millions de jeunes, une pratique non encadrée présente des risques. les chiffres parlent d'eux-mêmes&nbsp;:</p>
       <ul>
@@ -57,7 +57,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </li>
       </ul>
        <p style="margin-top: 1.5em;">Notre mission est de transformer ce temps d'écran en une expérience constructive.</p>
-      <a href="enjeux.html" class="btn" style="text-align:center;">Voir les chiffres &amp; sources détaillés</a>
+      <a href="enjeux.html" class="btn">Voir les chiffres &amp; sources détaillés</a>
     </section>
 
 
