--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </ul>
     </section>
  
-      <section class="section card" style="text-align:center;">
+      <section class="section card">
       <h2>Pourquoi un accompagnement est-il essentiel&nbsp;?</h2>
         <p>Si le jeu vidéo est une passion pour des millions de jeunes, une pratique non encadrée présente des risques. les chiffres parlent d'eux-mêmes&nbsp;:</p>
       <ul>
@@ -57,7 +57,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </li>
       </ul>
        <p style="margin-top: 1.5em;">Notre mission est de transformer ce temps d'écran en une expérience constructive.</p>
-      <a href="enjeux.html" class="btn">Voir les chiffres &amp; sources détaillés</a>
+      <p style="text-align:center; margin-top:2em;"><a href="enjeux.html" class="btn">Voir les chiffres &amp; sources détaillés</a>
     </section>
 
 
@@ -74,7 +74,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <img src="assets/images/logo_besf.png" alt="Logo de la Fédération Belge d'Esport" style="max-height: 70px; object-fit: contain;">
         </a>
       </div>
-      <a href="academie.html" class="btn">Découvrir notre académie</a>
+      <p style="text-align:center; margin-top:2em;"><a href="academie.html" class="btn">Découvrir notre académie</a>
     </section>
 
       <section class="section card" style="text-align:center;">
