--- a/enjeux.html
+++ b/enjeux.html
@@ -124,8 +124,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <a href="https://www.europarl.europa.eu/RegData/etudes/STUD/2020/652727/IPOL_STU(2020)652727_EN.pdf" target="_blank" rel="noopener">Lien</a>
     </li>
     <li id="source11">
-     Hodent, V. G. (Ed.). (2024). <em>The Psychology of Esports</em>. Palgrave Macmillan, Cham.
-    <a href="https://link.springer.com/book/10.1007/978-3-031-49557-9" target="_blank" rel="noopener">Lien</a>
+    Kubátová, J., Müller, M., Kosina, D., Kročil, O., & Slavíčková, P. (2025). <em>Soft Skills for the 21st Century</em>. Palgrave Macmillan, Cham.
+    <a href="https://link.springer.com/book/10.1007/978-3-031-89557-9" target="_blank" rel="noopener">Lien</a>
     </li>
   </ol>
 </section>
