--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <section class="section hero">
   <img src="assets/images/Ludus-Mentis-transparent.png" alt="Logo Ludus Mentis" style="max-width:120px; margin-bottom:1em" />
  <h1>Et si le jeu vidéo aidait votre enfant à grandir ?</h1>
-<p>Chez Ludus Mentis, nous transformons la passion du jeu vidéo en un puissant outil de développement personnel. grâce à notre approche pédagogique unique, votre enfant apprend la communication, la gestion des émotions et l'esprit d’équipe. pour s'épanouir à l'écran, comme dans la vie de tous les jours.</p>
+<p>Chez Ludus Mentis, nous transformons la passion du jeu vidéo en un puissant outil de développement personnel. Grâce à notre approche pédagogique unique, votre enfant apprend la communication, la gestion des émotions et l'esprit d’équipe. Pour s'épanouir à l'écran, comme dans la vie de tous les jours.</p>
 </section>
   <section class="section card" id="concept">
       <h2>Des compétences humaines pour le 21<sup>e</sup> siècle</h2>
