Add structured data for main pages

--- a/a-propos.html
+++ b/a-propos.html
@@ -13,6 +13,23 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <title>Notre Histoire : Du Scoutisme à l'Esport Éducatif | Ludus Mentis</title>
   <meta name="description" content="L'histoire d'Antoine Billard, fondateur de Ludus Mentis. Un parcours alliant passion pour le jeu vidéo et conviction que l'esport peut être une véritable école de vie.">
   <meta name="keywords" content="fondateur, histoire, antoine billard, esport, éducation, scoutisme, valeurs">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Ludus Mentis",
+    "description": "Histoire et mission de Ludus Mentis, initiative éducative mêlant jeu vidéo et développement personnel",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Walhain",
+      "addressRegion": "Wallonie",
+      "addressCountry": "BE"
+    },
+    "url": "https://ludusmentis.be/a-propos",
+    "email": "info@ludusmentis.be",
+    "areaServed": "Belgique"
+  }
+  </script>
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
