--- a/academie.html
+++ b/academie.html
@@ -13,6 +13,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <title>L'Académie Ludus Mentis : Programme des Ateliers Jeux Vidéo</title>
   <meta name="description" content="Découvrez le programme de notre académie pour jeunes de 10 à 15 ans. Déroulement d'une séance, piliers pédagogiques et développement de l'intelligence collective.">
   <meta name="keywords" content="programme académie, atelier jeu vidéo, déroulement séance, pédagogie active, bienveillance, intelligence collective">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "EducationalOrganization",
+    "name": "Académie Ludus Mentis",
+    "description": "Programme d'ateliers de jeu vidéo éducatif pour jeunes de 10 à 15 ans",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Walhain",
+      "addressRegion": "Wallonie",
+      "addressCountry": "BE"
+    },
+    "url": "https://ludusmentis.be/academie",
+    "email": "info@ludusmentis.be",
+    "areaServed": "Belgique",
+    "serviceType": "Formation et coaching esport éducatif"
+  }
+  </script>
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
