--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <title>Ludus Mentis | Ateliers Jeux Vidéo pour Ados à Walhain</title>
     <meta name="description" content="Transformez la passion des jeux vidéo de votre ado en compétences de vie (communication, gestion du stress, esprit d'équipe). Découvrez nos ateliers éducatifs à Walhain.">
     <meta name="keywords" content="stage jeux vidéo, coaching esport, adolescent, Walhain, activité extra-scolaire, développement personnel, compétences socio-émotionnelles">
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Ludus Mentis",
+      "description": "Programme d'ateliers de jeux vidéo éducatifs pour adolescents de 10 à 15 ans à Walhain",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Walhain",
+        "addressRegion": "Wallonie",
+        "addressCountry": "BE"
+      },
+      "url": "https://ludusmentis.be/",
+      "email": "info@ludusmentis.be",
+      "areaServed": "Belgique"
+    }
+    </script>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
