--- a/concept.html
+++ b/concept.html
@@ -13,6 +13,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <title>Notre Concept : Du Jeu Vidéo aux Compétences de Vie | Ludus Mentis</title>
   <meta name="description" content="Découvrez notre concept unique : utiliser des jeux vidéo populaires comme Overcooked ou Rocket League pour développer la communication, la collaboration et la gestion des émotions chez les jeunes.">
   <meta name="keywords" content="concept pédagogique, jeu vidéo éducatif, soft skills, compétences humaines, esport, apprentissage par le jeu">
+  <link rel="canonical" href="https://ludusmentis.be/concept.html">
+  <meta property="og:title" content="Notre Concept : Du Jeu Vidéo aux Compétences de Vie | Ludus Mentis">
+  <meta property="og:description" content="Découvrez notre concept unique : utiliser des jeux vidéo populaires comme Overcooked ou Rocket League pour développer la communication, la collaboration et la gestion des émotions chez les jeunes.">
+  <meta property="og:image" content="https://ludusmentis.be/assets/images/share-image.png">
+  <meta property="og:url" content="https://ludusmentis.be/concept.html">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
