--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <title>Contact et Inscription | Ludus Mentis à Walhain</title>
   <meta name="description" content="Posez vos questions ou demandez une présentation personnalisée de notre programme. L'équipe Ludus Mentis vous répond rapidement pour préparer la rentrée 2026.">
   <meta name="keywords" content="contact, inscription, information, email, formulaire, Walhain, académie esport, rentrée 2026">
-  
+  <link rel="canonical" href="https://ludusmentis.be/contact.html">
+  <meta property="og:title" content="Contact et Inscription | Ludus Mentis à Walhain">
+  <meta property="og:description" content="Posez vos questions ou demandez une présentation personnalisée de notre programme. L'équipe Ludus Mentis vous répond rapidement pour préparer la rentrée 2026.">
+  <meta property="og:image" content="https://ludusmentis.be/assets/images/share-image.png">
+  <meta property="og:url" content="https://ludusmentis.be/contact.html">
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
