--- a/educateurs.html
+++ b/educateurs.html
@@ -13,6 +13,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <title>Espace Éducateurs : Le Jeu Vidéo comme Outil Pédagogique | Ludus Mentis</title>
   <meta name="description" content="Pour les enseignants et professionnels de l'éducation. Découvrez comment nos ateliers développent des compétences clés (collaboration, esprit critique) applicables en milieu scolaire.">
   <meta name="keywords" content="espace éducateurs, outil pédagogique, esport scolaire, projet pédagogique, compétences 21e siècle, savoir-être">
+  <link rel="canonical" href="https://ludusmentis.be/educateurs.html">
+  <meta property="og:title" content="Espace Éducateurs : Le Jeu Vidéo comme Outil Pédagogique | Ludus Mentis">
+  <meta property="og:description" content="Pour les enseignants et professionnels de l'éducation. Découvrez comment nos ateliers développent des compétences clés (collaboration, esprit critique) applicables en milieu scolaire.">
+  <meta property="og:image" content="https://ludusmentis.be/assets/images/share-image.png">
+  <meta property="og:url" content="https://ludusmentis.be/educateurs.html">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
