--- a/enjeux.html
+++ b/enjeux.html
@@ -12,9 +12,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enjeux des Jeux Vidéo : Écrans, Isolement et Solutions | Ludus Mentis</title>
     <meta name="description" content="Analyse des enjeux liés aux jeux vidéo chez les jeunes : temps d'écran, gestion des émotions, risques. Découvrez comment notre approche encadrée apporte des solutions concrètes.">
-    <meta name="keywords" content="enjeux jeux vidéo, temps d'écran adolescent, gaming disorder, cyberharcèlement, solution parents, équilibre numérique">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
+      <meta name="keywords" content="enjeux jeux vidéo, temps d'écran adolescent, gaming disorder, cyberharcèlement, solution parents, équilibre numérique">
+      <link rel="canonical" href="https://ludusmentis.be/enjeux.html">
+      <meta property="og:title" content="Enjeux des Jeux Vidéo : Écrans, Isolement et Solutions | Ludus Mentis">
+      <meta property="og:description" content="Analyse des enjeux liés aux jeux vidéo chez les jeunes : temps d'écran, gestion des émotions, risques. Découvrez comment notre approche encadrée apporte des solutions concrètes.">
+      <meta property="og:image" content="https://ludusmentis.be/assets/images/share-image.png">
+      <meta property="og:url" content="https://ludusmentis.be/enjeux.html">
+      <link rel="stylesheet" href="assets/css/styles.css">
+      <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
