--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <title>Ludus Mentis | Ateliers Jeux Vidéo pour Ados à Walhain</title>
     <meta name="description" content="Transformez la passion des jeux vidéo de votre ado en compétences de vie (communication, gestion du stress, esprit d'équipe). Découvrez nos ateliers éducatifs à Walhain.">
     <meta name="keywords" content="stage jeux vidéo, coaching esport, adolescent, Walhain, activité extra-scolaire, développement personnel, compétences socio-émotionnelles">
+    <link rel="canonical" href="https://ludusmentis.be/index.html">
+    <meta property="og:title" content="Ludus Mentis | Ateliers Jeux Vidéo pour Ados à Walhain">
+    <meta property="og:description" content="Transformez la passion des jeux vidéo de votre ado en compétences de vie (communication, gestion du stress, esprit d'équipe). Découvrez nos ateliers éducatifs à Walhain.">
+    <meta property="og:image" content="https://ludusmentis.be/assets/images/share-image.png">
+    <meta property="og:url" content="https://ludusmentis.be/index.html">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
