--- a/kit-pedagogique.html
+++ b/kit-pedagogique.html
@@ -13,6 +13,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <title>Kit Pédagogique pour Éducateurs | Ludus Mentis</title>
   <meta name="description" content="Téléchargez notre kit pédagogique complet pour les enseignants et éducateurs. Il détaille notre vision, notre méthodologie et les compétences développées par les jeunes.">
   <meta name="keywords" content="kit pédagogique, ressource enseignant, esport éducation, dossier pédagogique, jeu vidéo école">
+  <link rel="canonical" href="https://ludusmentis.be/kit-pedagogique.html">
+  <meta property="og:title" content="Kit Pédagogique pour Éducateurs | Ludus Mentis">
+  <meta property="og:description" content="Téléchargez notre kit pédagogique complet pour les enseignants et éducateurs. Il détaille notre vision, notre méthodologie et les compétences développées par les jeunes.">
+  <meta property="og:image" content="https://ludusmentis.be/assets/images/share-image.png">
+  <meta property="og:url" content="https://ludusmentis.be/kit-pedagogique.html">
   <style>
     /* ======================================================================
        STYLES.CSS INTÉGRÉ
