--- a/mentions.html
+++ b/mentions.html
@@ -12,6 +12,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mentions Légales | Ludus Mentis</title>
   <meta name="description" content="Consultez les mentions légales de l'association Ludus Mentis ASBL.">
+  <link rel="canonical" href="https://ludusmentis.be/mentions.html">
+  <meta property="og:title" content="Mentions Légales | Ludus Mentis">
+  <meta property="og:description" content="Consultez les mentions légales de l'association Ludus Mentis ASBL.">
+  <meta property="og:image" content="https://ludusmentis.be/assets/images/share-image.png">
+  <meta property="og:url" content="https://ludusmentis.be/mentions.html">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
