--- a/methodologie.html
+++ b/methodologie.html
@@ -13,6 +13,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <title>Méthodologie Pédagogique : Le Cycle de Kolb appliqué au Jeu | Ludus Mentis</title>
   <meta name="description" content="Notre méthodologie s'appuie sur le cycle de Kolb pour transformer chaque partie en apprentissage durable. Découvrez notre cadre structuré pour développer les compétences.">
   <meta name="keywords" content="méthodologie, pédagogie, cycle de kolb, apprentissage par l'expérience, encadrement, bienveillance">
+  <link rel="canonical" href="https://ludusmentis.be/methodologie.html">
+  <meta property="og:title" content="Méthodologie Pédagogique : Le Cycle de Kolb appliqué au Jeu | Ludus Mentis">
+  <meta property="og:description" content="Notre méthodologie s'appuie sur le cycle de Kolb pour transformer chaque partie en apprentissage durable. Découvrez notre cadre structuré pour développer les compétences.">
+  <meta property="og:image" content="https://ludusmentis.be/assets/images/share-image.png">
+  <meta property="og:url" content="https://ludusmentis.be/methodologie.html">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
