--- a/academie.html
+++ b/academie.html
@@ -13,6 +13,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <title>L'Académie Ludus Mentis : Programme des Ateliers Jeux Vidéo</title>
   <meta name="description" content="Découvrez le programme de notre académie pour jeunes de 10 à 15 ans. Déroulement d'une séance, piliers pédagogiques et développement de l'intelligence collective.">
   <meta name="keywords" content="programme académie, atelier jeu vidéo, déroulement séance, pédagogie active, bienveillance, intelligence collective">
+  <link rel="canonical" href="https://ludusmentis.be/academie.html">
+  <meta property="og:title" content="L'Académie Ludus Mentis : Programme des Ateliers Jeux Vidéo">
+  <meta property="og:description" content="Découvrez le programme de notre académie pour jeunes de 10 à 15 ans. Déroulement d'une séance, piliers pédagogiques et développement de l'intelligence collective.">
+  <meta property="og:image" content="https://ludusmentis.be/assets/images/share-image.png">
+  <meta property="og:url" content="https://ludusmentis.be/academie.html">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
