--- a/faq.html
+++ b/faq.html
@@ -13,6 +13,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <title>FAQ - Questions Fréquentes sur nos Ateliers | Ludus Mentis</title>
   <meta name="description" content="Nos réponses à vos questions : à qui s'adressent nos ateliers, la place de la compétition, comment s'inscrire... Tout ce que les parents doivent savoir.">
   <meta name="keywords" content="FAQ, questions fréquentes, parents, compétition esport, inscription, bienveillance">
+  <link rel="canonical" href="https://ludusmentis.be/faq.html">
+  <meta property="og:title" content="FAQ - Questions Fréquentes sur nos Ateliers | Ludus Mentis">
+  <meta property="og:description" content="Nos réponses à vos questions : à qui s'adressent nos ateliers, la place de la compétition, comment s'inscrire... Tout ce que les parents doivent savoir.">
+  <meta property="og:image" content="https://ludusmentis.be/assets/images/share-image.png">
+  <meta property="og:url" content="https://ludusmentis.be/faq.html">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
