--- a/infos-tarifs.html
+++ b/infos-tarifs.html
@@ -13,6 +13,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <title>Infos & Tarifs de l'Académie de Jeux Vidéo | Ludus Mentis</title>
   <meta name="description" content="Consultez les informations pratiques de nos modules de 7 semaines pour jeunes de 10 à 15 ans. Tarif, structure des ateliers et inscription à Walhain.">
   <meta name="keywords" content="tarif stage jeu vidéo, prix académie esport, inscription, informations pratiques, module 7 semaines">
+  <link rel="canonical" href="https://ludusmentis.be/infos-tarifs.html">
+  <meta property="og:title" content="Infos & Tarifs de l'Académie de Jeux Vidéo | Ludus Mentis">
+  <meta property="og:description" content="Consultez les informations pratiques de nos modules de 7 semaines pour jeunes de 10 à 15 ans. Tarif, structure des ateliers et inscription à Walhain.">
+  <meta property="og:image" content="https://ludusmentis.be/assets/images/share-image.png">
+  <meta property="og:url" content="https://ludusmentis.be/infos-tarifs.html">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
