--- a/a-propos.html
+++ b/a-propos.html
@@ -30,7 +30,74 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     "areaServed": "Belgique"
   }
   </script>
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <!-- DaisyUI + Tailwind CSS via CDN -->
+<link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+<script src="https://cdn.tailwindcss.com"></script>
+
+<!-- Configuration Tailwind personnalisée -->
+<script>
+  tailwind.config = {
+    darkMode: 'class',
+    theme: {
+      extend: {
+        colors: {
+          primary: '#fb923c',     // Orange-400
+          'primary-focus': '#ea580c', // Orange-600
+          secondary: '#fbbf24',   // Amber-400
+          accent: '#ef4444',      // Red-500
+          neutral: '#1f2937',     // Gray-800
+          'base-100': '#f9fafb',  // Gray-50
+          'base-200': '#f3f4f6',  // Gray-100
+          'base-300': '#e5e7eb',  // Gray-200
+        },
+        fontFamily: {
+          'sans': ['Inter', 'system-ui', '-apple-system', 'sans-serif'],
+          'display': ['Space Grotesk', 'system-ui', 'sans-serif'],
+        },
+        animation: {
+          'fade-in': 'fadeIn 0.6s ease-out',
+          'slide-up': 'slideUp 0.5s ease-out',
+          'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+        },
+        backdropBlur: {
+          xs: '2px',
+        }
+      }
+    },
+    daisyui: {
+      themes: [
+        {
+          light: {
+            ...require("daisyui/src/theming/themes")["light"],
+            primary: "#fb923c",
+            secondary: "#fbbf24",
+            accent: "#ef4444",
+            neutral: "#1f2937",
+            "base-100": "#f9fafb",
+          },
+          dark: {
+            ...require("daisyui/src/theming/themes")["dark"],
+            primary: "#fb923c",
+            secondary: "#fbbf24",
+            accent: "#ef4444",
+            neutral: "#f3f4f6",
+            "base-100": "#111827",
+            "base-200": "#1f2937",
+            "base-300": "#374151",
+          },
+        },
+      ],
+    },
+  }
+</script>
+
+<!-- Custom styles (nouveau fichier styles.css simplifié) -->
+<link rel="stylesheet" href="assets/css/styles.css">
+
+<!-- Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
 <body>
